# eatwell

./: Cargo.toml
src/: food_api.rs  main.rs
src/database/: mod.rs  nutrient.rs  nutrition.rs  recipe.rs  table.rs  tables.rs  user.rs
src/eatwell-ui/: App.js  Dockerfile  app.json  package-lock.json  package.json  run_container.sh
src/eatwell-ui/filters/: cuisines.js  diets.js  meal_types.js  sorts.js
src/eatwell-ui/src/components/: BottomNav.jsx  Button.jsx  ButtonGroup.jsx  DarkButton.jsx  DropdownModal.jsx  Filter.jsx  FilterButton.jsx  RecipeCard.jsx  SearchBar.jsx  SortButton.jsx  SortDirectionButton.jsx
src/eatwell-ui/src/screens/: AboutScreen.jsx  BrowseScreen.jsx  GenerateScreen.jsx  HelpScreen.jsx  LoginScreen.jsx  MeScreen.jsx  MyRecipesScreen.jsx  RecipeDetailsScreen.jsx  SignupScreen.jsx
src/eatwell-ui/src/tabs/: BrowseTab.jsx  MeTab.jsx
src/eatwell-ui/src/utils/: storage.js
src/types/: cuisines.rs  diets.rs  meal_types.rs  mod.rs  sorting.rs
src/web/: mod.rs  routes.rs
