[package]
name = "eatwell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
postgres = "0.19.7"
actix-web = "4"
tokio = "1"
bcrypt = "0.15.0"
uuid = { version = "1.6.1", features = ["v4"] }
sha2 = "0.9.3"